--- a/assets/section-multicolumn.css
+++ b/assets/section-multicolumn.css
@@ -48,7 +48,7 @@
 }
 
 .multicolumn-card__image-wrapper.image-is--icon {
-  width: 30%;
+  width: 15%;
 }
 
 .multicolumn-card__image-wrapper--third-width {
@@ -173,6 +173,10 @@ ul li.multicolumn-list__item.has-bg--color:last-child {
 .background-none .multicolumn-card-spacing {
   padding: 0;
   margin: 0;
+}
+
+.multicolumn-list__item.no--padding {
+  padding: 0;
 }
 
 .multicolumn-card__info {
